--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 
 /* Import GoogleFonts ( Inter 400/700 - Lexand Deca 400) */
-@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Big+Shoulders+Display:wght@700&family=Lexend+Deca:wght@400&display=swap');
 
 :root {
 	--bright-orange: hsl(31, 77%, 52%);
@@ -10,4 +10,15 @@
 	--transparent-white: hsla(0, 0%, 100%, 0.75); /* (paragraphs)*/
 	--very-light-gray: hsl(0, 0%, 95%); /* (background, headings, buttons)*/
 
+}
+
+html {
+	font-size: 15px;
+}
+
+.attribution { 
+    font-size: 11px; text-align: center; 
+}
+.attribution a { 
+	color: hsl(228, 45%, 44%); 
 }
