Added all elements

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ html {
 
 .attribution { 
     font-size: 11px; text-align: center; 
+    display: none;
 }
 .attribution a { 
 	color: hsl(228, 45%, 44%); 
