--- a/style.css
+++ b/style.css
@@ -9,17 +9,104 @@
 	/* Neutral */
 	--transparent-white: hsla(0, 0%, 100%, 0.75); /* (paragraphs)*/
 	--very-light-gray: hsl(0, 0%, 95%); /* (background, headings, buttons)*/
-
+    /* -Fonts- */
+    --big-shoulders: 'Big Shoulders Display';
+    --lexend: 'Lexend Deca';
 }
 
 html {
 	font-size: 15px;
+	color: var(--transparent-white);
+	font-family: var(--lexend);
+	font-weight: 400;
 }
 
+body {
+	width: 100%;
+	height: 100vh;
+
+}
+
+h2 {
+	font-family: var(--big-shoulders);
+	font-weight: 700;
+	font-size: 2rem;
+	color: white;
+}
+
+button {
+	font-family: var(--lexend);
+	background-color: white;
+	border-radius: 30px;
+	border-style: none;
+	padding: 10px;
+
+}
+
+main {
+	display: flex;
+	flex-direction: column;
+	width: 80%;
+	max-width: 300px;
+	margin: auto;
+}
+
+.card {
+	padding: 30px;
+}
+.sedan {
+	background-color: var(--bright-orange); 
+	border-radius: 10px 10px 0 0;
+}
+
+.suv {
+	background-color: var(--dark-cyan); 
+}
+
+.luxury {
+	background-color: var(--very-dark-cyan); 
+	border-radius:  0 0 10px 10px;
+}
 .attribution { 
-    font-size: 11px; text-align: center; 
-    display: none;
+    font-size: 11px; 
+    text-align: center; 
+    color: black;
 }
 .attribution a { 
 	color: hsl(228, 45%, 44%); 
+}
+
+#orange {
+	color: var(--bright-orange); 
+
+}
+
+#cyan {
+	color: var(--dark-cyan);
+
+}
+
+#dark-cyan {
+	color: var(--very-dark-cyan); 
+
+}
+
+@media only screen and (min-width: 900px) {
+	main {
+		flex-direction: row;
+		max-width: 800px;
+		margin-top: 100px;
+
+	}
+	.sedan {
+	border-radius: 10px 0 0 10px;
+	}
+	.luxury {
+	border-radius: 0 10px 10px 0;
+
+	}
+	.attribution {
+		display: none;
+	}
+
 }
